# templates

./: .gitignore  .gitlab-ci.yml  404.html  CNAME  CONTRIBUTING.md  README.md  babel.config.json  index.html  lerna.json  lunr-index-1622201691345.json  lunr-index-1622718094786.json  lunr-index-1622719234147.json  lunr-index-1622727979584.json  lunr-index-1622816786583.json  lunr-index-1622818015030.json  lunr-index-1623158251630.json  lunr-index-1623162924882.json  lunr-index-1623667272855.json  lunr-index-1623849748124.json  lunr-index-1623851572632.json  lunr-index-1624005507079.json  lunr-index-1624007562308.json  lunr-index-1624022557112.json  lunr-index-1624023144813.json  lunr-index-1624024383017.json  lunr-index-1624045901104.json  lunr-index-1624278530146.json  lunr-index-1624282854949.json  lunr-index-1624459948438.json  lunr-index-1624480302150.json  lunr-index-1624537837651.json  lunr-index-1624538650297.json  lunr-index-1624540474517.json  lunr-index-1624541441688.json  lunr-index-1624547677205.json  lunr-index-1624548384050.json  lunr-index-1624548618942.json  lunr-index-1624548718051.json  lunr-index-1624578103241.json  lunr-index-1624581761772.json  (+179 more)
.github/: dependabot.yml
.github/workflows/: publish-cra.yml  publish-docs.yml  publish-dotnet.yml  publish-express.yml  publish-nodejs.yml  test-publish-docs.yaml
assets/css/: styles.074864c1.css  styles.1fc2770a.css  styles.2448c468.css  (+23 more)
blog/: atom.xml  rss.xml
common/: NEXT_STEPS.md
cra/: .npmrc  LICENSE  README.md  index.html  lerna.json  package-lock.json  package.json
cra-pipeline-upgrade/: .gitlab-ci.yml  Dockerfile  README.md
cra-template/: README.md  package.json  template.json
cra-template-authless/: package.json  template.json
cra-template-authless-js/: package.json  template.json
cra-template-extensive/: README.md
cra-template-js/: README.md  package.json  template.json
docusaurus/: Dockerfile  docusaurus.config.js  docusaurus.config.ts  package-lock.json  package.json  sidebars.js  sidebarsBlazor.js  sidebarsDotnet.js  sidebarsExpress.js  sidebarsMetroworker.js  sidebarsPython.js  sidebarsReact.js
dotnet/: Intility.Templates.csproj  README.md  index.html
express/: .eslintrc.json  .gitignore  README.md  index.html  package-lock.json  package.json
fastapi/: .flake8  .pre-commit-config.yaml  README.md  cookiecutter.json  index.html  pyproject.toml
fastapi/getting-started/included-dependencies/: index.html
fastapi/getting-started/installation/: index.html
fastapi/getting-started/project-overview/: index.html
fastapi/hooks/: post_gen_project.py  pre_gen_project.py
fastapi/setup/authorization/: index.html
fastapi/setup/docker-compose/: index.html
fastapi/setup/gitlab/: index.html
fastapi/setup/inspecting/: index.html
fastapi/setup/poetry/: index.html
fastapi/setup/pycharm/: index.html
fastapi/setup/sentry/: index.html
fastapi/topics/migrations/: index.html
fastapi/topics/testing/: index.html
fastapi/{{ cookiecutter.project_name }}/: .dockerignore  .env  .flake8  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yaml  example.env  mypy.ini  pyproject.toml  pytest.ini
fastapi/{{ cookiecutter.project_name }}/app/: main.py
fastapi/{{ cookiecutter.project_name }}/app/api/: dependencies.py  security.py
fastapi/{{ cookiecutter.project_name }}/app/api/api_v1/: api.py
fastapi/{{ cookiecutter.project_name }}/app/api/api_v1/endpoints/: cars.py  views.py
fastapi/{{ cookiecutter.project_name }}/app/core/: config.py  db.py  logging_config.py
fastapi/{{ cookiecutter.project_name }}/app/models/: cars.py
fastapi/{{ cookiecutter.project_name }}/app/schemas/: hello_world.py
fastapi/{{ cookiecutter.project_name }}/ci/docker/base/: Dockerfile
fastapi/{{ cookiecutter.project_name }}/ci/docker/fastapi/: Dockerfile  entrypoint.sh  entrypoint_dev.sh  gunicorn.conf.py
fastapi/{{ cookiecutter.project_name }}/ci/docker/test/: Dockerfile
fastapi/{{ cookiecutter.project_name }}/migrations/: README  alembic_functions.py  env.py
fastapi/{{ cookiecutter.project_name }}/migrations/versions/: d8ba1a4996fa_init.py
fastapi/{{ cookiecutter.project_name }}/tests/: README.md  conftest.py
fastapi/{{ cookiecutter.project_name }}/tests/api/: auth_utils.py  conftest.py  test_api.py  test_api_with_auth.py  test_cars_api.py
fastapi/{{ cookiecutter.project_name }}/tests/models/: test_cars.py
generator-intility-node/: README.md
generator-node/: .gitignore  package-lock.json  package.json
generator-nodejs/: package.json
nest/: .env.template  .eslintrc.js  .gitignore  .gitlab-ci.yml  .prettierrc  Dockerfile  README.md  catalog-info.yaml  jest.config.ts  package-lock.json  package.json  tsconfig.json
nodejs/: jest.config.json  package-lock.json  package.json
react/: .env.development  .eslintrc  .gitignore  .gitlab-ci.yml  .npmrc  Dockerfile  Dockerfile.CI  README.md  app.code-workspace  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+1983 files in other folders)
