[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.78.0"
asgi-correlation-id = "^3.0.0"
gunicorn = "^20.1.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
sentry-sdk = "^1.5.12"
{% if cookiecutter.authentication_strategy == 'FastAPI Azure Auth (default)' %}
fastapi-azure-auth = "^3.0.3"
{% endif %}
{% if cookiecutter.sqlmodel == 'True' %}
alembic = "^1.7.4"
sqlmodel = "0.0.6"
asyncpg = "0.25.0"
{% endif %}

[tool.poetry.dev-dependencies]
aioresponses = "^0.7.2"
black = "^22.3.0"
coverage = {version = "^5.5", extras = ["toml"]}
httpx = "^0.23.0"
isort = "^5.9.3"
pre-commit = "^2.14.0"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3 "
pytest-cov = "^2.12.1"
pytest-env = "^0.6.2"
pytest-mock = "^3.7.0"
pytest-socket = "^0.5.1"
pytest-xdist = {version = "^2.5.0", extras = ["psutil"]}
requests = "^2.26.0"
{% if cookiecutter.sqlmodel == 'True' %}
greenlet = "^1.1.2"
{% endif %}


[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
    (\.eggs|\.git|\.hg|\.mypy_cache|\.tox|\.venv|\venv|\.github|\docs|\tests|\__pycache__)
)
'''

[tool.isort]
profile = "black"
src_paths = ["app"]
combine_as_imports = true
line_length = 120
sections = [
    'FUTURE',
    'STDLIB',
    'THIRDPARTY',
    'FIRSTPARTY',
    'LOCALFOLDER',
]

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = true
